[project]
name = "anchor-modeling-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mattias Thalén", email = "bitter-polders0x@icloud.com" }
]
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "mypy>=1.19.0",
    "pre-commit>=4.0.0",
    "pytest-cov>=7.0.0",
    "pytest>=8.4.2",
    "ruff>=0.14.8",
    "types-python-dateutil>=2.9.0.20251115",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
]

[project.scripts]
anchor-modeling-tool = "anchor_modeling_tool:main"

[build-system]
requires = ["uv_build>=0.9.25,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.mypy]
ignore_missing_imports = true